remove remaining usages of FML StringUtils